# DocuBot

./: .docubot_progress.json  .gitignore  1. Code Structure & Implementation Issues.py  10. fixtracker.py  11. check_gitignore.py  12. smart_validator.py  13. test_llm_fix.py  2. Core Logic & Missing Features.py  4. UI Components & Forms.py  5. Professional Standards.py  6. complete tracker-v.1.0.py  7. complete-structure-v.1.0.py  8. complete-timeline.md  9. structure_validator.py  CONTRIBUTING.md  LICENSE  README.md  app.py  config di root.rar  install_docubot.py  pyproject.toml  pytest.ini  requirements.txt  runserver.py  smart_validation_report.json  start_all.py  tesseract_tracker_report.txt  test-debug.py
backups/: main_window_backup_20260126_175157.py  main_window_backup_20260126_200222.py
data/config/: app_config.yaml  llm_config.yaml  ui_config.yaml
data/logs/: diagnostic_report.json
debug_reports/: debug_analysis_20260131_000202.json  debug_summary_20260131_000202.txt
docs/: complete-timeline.md
reports/: database_fixes_report_20260124_202033.json  p1_13_2_report_20260126_194003.json
scripts/: backup.py  diagnostic.py  download_models.py  init_db.py  install_tesseract.py  setup.py  validate_resources.py
src/ai_engine/: __init__.py  conversation_memory.py  embedding_service.py  llm_client.py  model_manager.py  prompt_templates.py  rag_engine.py  summarizer.py  tagging.py
src/core/: app.py  config.py  constants.py  exceptions.py  logger.py
src/database/: initial_migration.py  models.py  queries.py  sqlite_client.py
src/document_processing/: __init__.py  base_extractor.py  chunking.py  cleaning.py  metadata.py  processor.py
src/mocks/: __init__.py  database_client.py  document_processor.py  llm_client.py
src/storage/: cache_manager.py  encryption.py
src/ui/: __init__.py
src/utilities/: cleanup.py  formatter.py  helpers.py  logger.py  monitor.py  retry.py  task_queue.py
src/vector_store/: chroma_client.py  index_manager.py  search_engine.py
tests/: conftest.py  coverage_utils.py
tests/e2e/: test_full_workflow.py  (+1 more)
(+60 files in other folders)
